# Wego-Informatics

./: .gitignore  CMakeLists.txt  LICENSE  MIT_LICENSE  README.md  TODO  quiz.cpp  schedule_2025_autumn_2026_spring.md  schedule_fall_2024.md  schedule_spring_2025.md
Contest/: apartment-solution-bruteforce-TLE.cpp  heartbleed-validator.cpp  lift-solution-bottom-up.cpp  lift-test-max-generator.cpp  lift-validator.cpp  password-checker.cpp  password-solution-priority-queue.cpp  virus-solution-vector.cpp  virus-validator.cpp
Contest_Fall_2024/: CMakeLists.txt  apartment-test-1to3000000-3.cpp  heartbleed-solution.cpp  secret-checker.cpp  secret-solution.cpp  virus-solution-unionfind.cpp
Contest_Fall_2024/solution/: apartment-solution-binarysearch.cpp  password-solution-vector.cpp
Contest_Fall_2024/validator/: password-validator.cpp  secret-validator.cpp
Contest_Spring_2025/: CMakeLists.txt
Contest_Spring_2025/solutions/: broadcast-storm-solution-unionfind.cpp  discount-solution.cpp  ping-solution.cpp
Contest_Spring_2025/validators/: box-validator.cpp  discount-validator.cpp  score-validator.cpp  time-validator.cpp
Week02/: cin_cout.cpp
Week03/: char_string.cpp
Week06/: for.cpp
Week07/: card.cpp  sort_array.cpp
Week09/: poker.cpp  switch.cpp
Week1/: test.cpp
Week10/: review.cpp
Week11/: bitwise_operator.cpp
Week12/: 2d_array.cpp
Week13/: vector.cpp
Week15/: leetcode217_1.cpp  leetcode217_2.cpp  leetcode217_3.cpp
Week16/: map.cpp
Week17/: sorting.cpp
Week18/: leetcode1539.cpp  leetcode35_2.cpp
Week2/: cin_cout.cpp  var_operators.cpp
Week3/: float_double.cpp
Week6/: for.cpp  miko.cpp  while.cpp
Week7/: array.cpp
Week8/: table.cpp
Week9/: poker.cpp
contest_fall_2024/: CMakeLists.txt
contest_fall_2024/solution/: new-server-solution.cpp
contest_fall_2024/test/: apartment-test-1to3000000-4.cpp
contest_fall_2024/validator/: apartment-validator.cpp  new-server-validator.cpp
contest_spring_2025/solutions/: box-solution-lis.cpp  score-solution-map.cpp  time-solution.cpp
contest_spring_2025/validators/: broadcast-storm-validator.cpp  ping-validator.cpp
templates/: template_all_barebone.cpp
week01/: basic.cpp
week02/: var_operators.cpp
week04/: if_else.cpp  shigure.cpp
week08/: reading_nested_code.cpp
week12/: 2d_array.cpp
week13/: vector.cpp
week14/: leetcode26.cpp  leetcode27.cpp  leetcode58.cpp
week15/: set.cpp
week18/: binary_search.cpp  leetcode2540.cpp  leetcode35.cpp
week19/: leetcode1456.cpp  leetcode186_1.cpp  leetcode187_2.cpp  leetcode3.cpp
week20/: gcd.cpp  leetcode46.cpp  leetcode509.cpp  leetcode51.cpp  leetcode77.cpp
