cmake_minimum_required(VERSION 3.0)
project(Wego-Informatics)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(Contest_Fall_2024)
add_subdirectory(Contest_Spring_2025)

add_executable(quiz quiz.cpp)

add_executable(week1_test Week1/test.cpp)
add_executable(week1_basic Week1/basic.cpp)
add_executable(week2_cio Week2/cin_cout.cpp)
add_executable(week2_var Week2/var_operators.cpp)
add_executable(week3_string Week3/char_string.cpp)
add_executable(week3_float Week3/float_double.cpp)
add_executable(week4_if Week4/if_else.cpp)
add_executable(week4_example Week4/shigure.cpp)
add_executable(week5_while Week5/while.cpp)
add_executable(week5_example Week5/miko.cpp)
add_executable(week6_for Week6/for.cpp)
add_executable(week7_array Week7/array.cpp)
add_executable(week7_card Week7/card.cpp)
add_executable(week7_sort_array Week7/sort_array.cpp)
add_executable(week8_bad_nested_code Week8/reading_nested_code.cpp)
add_executable(week8_example Week8/table.cpp)
add_executable(week9_switch Week9/switch.cpp)
add_executable(week9_example Week9/poker.cpp)
add_executable(week10_review Week10/review.cpp)
add_executable(week11_bitwise_operator Week11/bitwise_operator.cpp)
add_executable(week12_2d_array Week12/2d_array.cpp)
add_executable(week13_vector Week13/vector.cpp)
add_executable(week14_lc26 Week14/leetcode26.cpp)
add_executable(week14_lc27 Week14/leetcode27.cpp)
add_executable(week14_lc58 Week14/leetcode58.cpp)
add_executable(week15_set Week15/set.cpp)
add_executable(week15_lc217_1 Week15/leetcode217_1.cpp)
add_executable(week15_lc217_2 Week15/leetcode217_2.cpp)
add_executable(week15_lc217_3 Week15/leetcode217_3.cpp)
add_executable(week16_map Week16/map.cpp)
add_executable(week17_sorting Week17/sorting.cpp)
add_executable(week18_binary_search Week18/binary_search.cpp)
add_executable(week18_lc35 Week18/leetcode35.cpp)
add_executable(week18_lc35_2 Week18/leetcode35_2.cpp)
add_executable(week18_lc1539 Week18/leetcode1539.cpp)
add_executable(week18_lc2540 Week18/leetcode2540.cpp)
