cmake_minimum_required(VERSION 3.5)
project(Wego-Informatics)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(contest_fall_2024)
add_subdirectory(contest_spring_2025)

add_executable(week01_test week01/test.cpp)
add_executable(week01_basic week01/basic.cpp)
add_executable(week02_cio week02/cin_cout.cpp)
add_executable(week02_var week02/var_operators.cpp)
add_executable(week03_string week03/char_string.cpp)
add_executable(week03_float week03/float_double.cpp)
add_executable(week04_if week04/if_else.cpp)
add_executable(week04_example week04/shigure.cpp)
add_executable(week05_while week05/while.cpp)
add_executable(week05_example week05/miko.cpp)
add_executable(week06_for week06/for.cpp)
add_executable(week07_array week07/array.cpp)
add_executable(week07_card week07/card.cpp)
add_executable(week07_sort_array week07/sort_array.cpp)
add_executable(week08_bad_nested_code week08/reading_nested_code.cpp)
add_executable(week08_example week08/table.cpp)
add_executable(week09_switch week09/switch.cpp)
add_executable(week09_example week09/poker.cpp)
add_executable(week10_review week10/review.cpp)
add_executable(week11_bitwise_operator week11/bitwise_operator.cpp)
add_executable(week12_2d_array week12/2d_array.cpp)
add_executable(week13_vector week13/vector.cpp)
add_executable(week14_lc26 week14/leetcode26.cpp)
add_executable(week14_lc27 week14/leetcode27.cpp)
add_executable(week14_lc58 week14/leetcode58.cpp)
add_executable(week15_set week15/set.cpp)
add_executable(week15_lc217_1 week15/leetcode217_1.cpp)
add_executable(week15_lc217_2 week15/leetcode217_2.cpp)
add_executable(week15_lc217_3 week15/leetcode217_3.cpp)
add_executable(week16_map week16/map.cpp)
add_executable(week17_sorting week17/sorting.cpp)
add_executable(week18_binary_search week18/binary_search.cpp)
add_executable(week18_lc35 week18/leetcode35.cpp)
add_executable(week18_lc35_2 week18/leetcode35_2.cpp)
add_executable(week18_lc1539 week18/leetcode1539.cpp)
add_executable(week18_lc2540 week18/leetcode2540.cpp)
add_executable(week19_lc1456 week19/leetcode1456.cpp
        week19/leetcode3.cpp)
add_executable(week19_lc186_1 week19/leetcode187_1.cpp)
add_executable(week19_lc186_2 week19/leetcode187_2.cpp)
add_executable(week19_lc3 week19/leetcode3.cpp)
