add_executable(c2024f_new-server-validator new-server-validator.cpp)
add_executable(c2024f_new-server-solution new-server-solution.cpp)
add_executable(c2024f_virus-validator virus-validator.cpp)
add_executable(c2024f_virus-solution-unionfind virus-solution-unionfind.cpp)
add_executable(c2024f_password-validator password-validator.cpp)
add_executable(c2024f_password-checker password-checker.cpp)
add_executable(c2024f_password-solution-vector password-solution-vector.cpp)
add_executable(c2024f_password-solution-priority-queue password-solution-priority-queue.cpp)
add_executable(c2024f_heartbleed-validator heartbleed-validator.cpp)
add_executable(c2024f_heartbleed-solution heartbleed-solution.cpp)
add_executable(c2024f_virus-solution-vector virus-solution-vector.cpp)
add_executable(c2024f_apartment-validator apartment-validator.cpp)
add_executable(c2024f_apartment-solution-bruteforce-TLE apartment-solution-bruteforce-TLE.cpp)
add_executable(c2024f_apartment-solution-binarysearch apartment-solution-binarysearch.cpp)
add_executable(c2024f_apartment-test-1to3000000-4 apartment-test-1to3000000-4.cpp)
add_executable(c2024f_apartment-test-1to3000000-3 apartment-test-1to3000000-3.cpp)
add_executable(c2024f_secret-checker secret-checker.cpp)
add_executable(c2024f_secret-validator secret-validator.cpp)
add_executable(c2024f_secret-solution secret-solution.cpp)
add_executable(c2024f_lift-validator lift-validator.cpp)
add_executable(c2024f_lift-solution-bottom-up lift-solution-bottom-up.cpp)
add_executable(c2024f_lift-test-max-generator lift-test-max-generator.cpp)