add_executable(c2025s_box-solution-lis solutions/box-solution-lis.cpp)
add_executable(c2025s_box-validator validators/box-validator.cpp)
add_executable(c2025s_ping-validator validators/ping-validator.cpp)
add_executable(c2025s_ping-solution solutions/ping-solution.cpp)
add_executable(c2025s_discount-validator validators/discount-validator.cpp)
add_executable(c2025s_discount-solution solutions/discount-solution.cpp)
add_executable(c2025s_score-validator validators/score-validator.cpp)
add_executable(c2025s_score-solution-map solutions/score-solution-map.cpp)
add_executable(c2025s_broadcast-storm-validator validators/broadcast-storm-validator.cpp)
add_executable(c2025s_broadcast-storm-solution-unionfind solutions/broadcast-storm-solution-unionfind.cpp)
add_executable(c2025s_time-validator validators/time-validator.cpp)
add_executable(c2025s_time-solution solutions/time-solution.cpp)
