add_executable(c2024f_new-server-validator validator/new-server-validator.cpp)
add_executable(c2024f_new-server-solution solution/new-server-solution.cpp)
add_executable(c2024f_virus-validator validator/virus-validator.cpp)
add_executable(c2024f_virus-solution-unionfind solution/virus-solution-unionfind.cpp)
add_executable(c2024f_password-validator validator/password-validator.cpp)
add_executable(c2024f_password-checker checker/password-checker.cpp)
add_executable(c2024f_password-solution-vector solution/password-solution-vector.cpp)
add_executable(c2024f_password-solution-priority-queue solution/password-solution-priority-queue.cpp)
add_executable(c2024f_heartbleed-validator validator/heartbleed-validator.cpp)
add_executable(c2024f_heartbleed-solution solution/heartbleed-solution.cpp)
add_executable(c2024f_virus-solution-vector solution/virus-solution-vector.cpp)
add_executable(c2024f_apartment-validator validator/apartment-validator.cpp)
add_executable(c2024f_apartment-solution-bruteforce-TLE solution/apartment-solution-bruteforce-TLE.cpp)
add_executable(c2024f_apartment-solution-binarysearch solution/apartment-solution-binarysearch.cpp)
add_executable(c2024f_apartment-test-1to3000000-4 test/apartment-test-1to3000000-4.cpp)
add_executable(c2024f_apartment-test-1to3000000-3 test/apartment-test-1to3000000-3.cpp)
add_executable(c2024f_secret-checker checker/secret-checker.cpp)
add_executable(c2024f_secret-validator validator/secret-validator.cpp)
add_executable(c2024f_secret-solution solution/secret-solution.cpp)
add_executable(c2024f_lift-validator validator/lift-validator.cpp)
add_executable(c2024f_lift-solution-bottom-up solution/lift-solution-bottom-up.cpp)
add_executable(c2024f_lift-test-max-generator generator/lift-test-max-generator.cpp)